examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8181
  selector:
    k8s-app: demo
  type: ClusterIP
